test/expect/cmd.cc-msvc-src-c-E.stderr.txt
^error: invalid argument '-std=c\+\+11' not allowed with 'C(/ObjC)?'$
